# SecureFUSEStream

./: .gitignore  Pipfile  README.md  bench.sh  duplicate.sh  verify.py
fuse/: 2x_timing_log.txt  4x_timing_log.txt  Cargo.toml  TA_timing_log.txt  cp.sh  cuda_timings.data  frame_info.txt  fuse  plot_cuda.py  run.sh  timing_log.txt  timings.data
fuse/cuda_timings/: 16x_timing_log.txt  32x_timing_log.txt  64x_timing_log.txt  8x_timing_log.txt  timing_log.txt
fuse/src/: main.rs  passthrough.rs
processing/: README.md
processing/c/: extract_frames.c  extract_frames1  video.c
processing/cuda/: CMakeLists.txt  cuda_timings.data  imgConv  main.cu  run.sh
secure_storage/: deploy.sh
secure_storage/host/: optee_example_secure_storage
videoTEE/: Makefile  deploy.sh  install_video_tee.sh
videoTEE/host/: Makefile  main.c
videoTEE/lib/bmp/: bmp.c  bmp.h
videoTEE/lib/libbmp/: libbmp.c  libbmp.h
videoTEE/ta/: Makefile  sub.mk  user_ta_header_defines.h  video_tee_ta.c
videoTEE/ta/include/: video_tee_ta.h
